Bug 91465 - Fix cast to pointer from integer of different size on win64
Summary: Fix cast to pointer from integer of different size on win64
Status: RESOLVED FIXED
Alias: None
Product: poppler
Classification: Unclassified
Component: utils (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: poppler-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-26 10:42 UTC by Hib Eris
Modified: 2015-07-27 12:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix cast to pointer from integer of different size on win64 (7.48 KB, patch)
2015-07-26 10:42 UTC, Hib Eris
Details | Splinter Review

Description Hib Eris 2015-07-26 10:42:18 UTC
Fixes warning:

[  322s]   CXX      pdftocairo-pdftocairo-win32.o
[  324s] In file included from /usr/x86_64-w64-mingw32/sys-root/mingw/include/windows.h:72:0,
[  324s]                  from /usr/x86_64-w64-mingw32/sys-root/mingw/include/cairo/cairo-win32.h:44,
[  324s]                  from pdftocairo-win32.cc:16:
[  324s] pdftocairo-win32.cc: In function 'HWND__* createGroupBox(HWND, HINSTANCE, int, const char*, RECT*)':
[  324s] pdftocairo-win32.cc:170:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
[  324s] pdftocairo-win32.cc: In function 'HWND__* createCheckBox(HWND, HINSTANCE, int, const char*, RECT*)':
[  324s] pdftocairo-win32.cc:186:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
[  324s] pdftocairo-win32.cc: In function 'HWND__* createStaticText(HWND, HINSTANCE, int, const char*, RECT*)':
[  324s] pdftocairo-win32.cc:202:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
[  324s] pdftocairo-win32.cc: In function 'HWND__* createPageScaleComboBox(HWND, HINSTANCE, int, RECT*)':
[  324s] pdftocairo-win32.cc:219:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
Comment 1 Hib Eris 2015-07-26 10:42:21 UTC
Created attachment 117381 [details] [review]
Fix cast to pointer from integer of different size on win64
Comment 2 Carlos Garcia Campos 2015-07-27 12:53:57 UTC
I just trust you here :-) Pushed to git master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.