pdftocairo: Fix cast to pointer from integer of different size on win64

Fixes warning:

[  322s]   CXX      pdftocairo-pdftocairo-win32.o
[  324s] In file included from /usr/x86_64-w64-mingw32/sys-root/mingw/include/windows.h:72:0,
[  324s]                  from /usr/x86_64-w64-mingw32/sys-root/mingw/include/cairo/cairo-win32.h:44,
[  324s]                  from pdftocairo-win32.cc:16:
[  324s] pdftocairo-win32.cc: In function 'HWND__* createGroupBox(HWND, HINSTANCE, int, const char*, RECT*)':
[  324s] pdftocairo-win32.cc:170:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
[  324s] pdftocairo-win32.cc: In function 'HWND__* createCheckBox(HWND, HINSTANCE, int, const char*, RECT*)':
[  324s] pdftocairo-win32.cc:186:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
[  324s] pdftocairo-win32.cc: In function 'HWND__* createStaticText(HWND, HINSTANCE, int, const char*, RECT*)':
[  324s] pdftocairo-win32.cc:202:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^
[  324s] pdftocairo-win32.cc: In function 'HWND__* createPageScaleComboBox(HWND, HINSTANCE, int, RECT*)':
[  324s] pdftocairo-win32.cc:219:23: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
[  324s]         parent, (HMENU)id,
[  324s]                        ^

https://bugs.freedesktop.org/show_bug.cgi?id=91465